# pink-updater

./: Cargo.toml  LICENSE  example.config.yaml  example.env
src/: main.rs
units/: pink-updater.service
