[package]
name = "pink-updater"
version = "0.1.0"
edition = "2021"
license = "GNU All-permissive"

[dependencies]
# web framework
axum = { version = "0.6", default_features = false, features = ["http1", "json", "tokio"] }
hyper = "0.14"
# configuration
dotenvy = "0.15.6"
# runtime
tokio = { version = "1.23", default_features = false, features = ["rt-multi-thread", "macros", "process"] }
# logging
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# webhook signature validation
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
